# jorik-cli

./: Cargo.toml  README.md
.github/workflows/: build.yml
installer/: install.sh  jorik-cli.iss  update-prerelease.sh
src/: api.rs  main.rs  tui.rs
