[package]
name = "jorik-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored_json = "5.0"
colored = "2.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
dirs = "5.0"
open = "5.1"
