[package]
name = "jorik-cli"
version = "0.4.0-a"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored_json = "5.0"
colored = "2.1"
reqwest = { version = "0.12", features = ["json"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
dirs = "5.0"
open = "5.1"

# image/graphics rendering dependencies for --version logo
image = "0.25"
base64 = "0.21"
icy_sixel = "0.4"
terminal_size = "0.3"
ratatui-image = { version = "10.0.2", default-features = false, features = ["image-defaults", "crossterm"] }
ratatui = "0.30"
atty = "0.2"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
url = "2.5.8"
chrono = "0.4.43"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3.5"
